# Viscometer

./: .gitignore  CMakeLists.txt  ImageWindow.cpp  ImageWindow.h  LICENSE  README.md  WidgetWindow.cpp  WidgetWindow.h  flake.nix  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  test52.pro  test52.pro.user.66f9533
include/: mainwindow.hpp  viscosimetercontroller.hpp
resources/: COOLButton.qml  FAQ.qml  Limbus.qml  PanelButton.qml  RootEntity.qml  SOrbitCameraController.qml  SevenSegmentDisplay.qml  main.qml  main.qml.autosave  resources.qrc
resources/models/: viscosimeter_model.glb
src/: main.cpp  mainwindow.cpp
